// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dark mode 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "borderTopColor": "rgba(148, 163, 184, 0.15)",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 10,
      },
      {
        "backgroundColor": "#111111",
        "paddingBottom": 10,
      },
    ]
  }
>
  <TextInput
    blurOnSubmit={false}
    maxLength={1000}
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Type a message…"
    placeholderTextColor="#64748B"
    returnKeyType="send"
    style={
      [
        {
          "borderRadius": 22,
          "flex": 1,
          "fontSize": 15,
          "maxHeight": 120,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
          "textAlignVertical": "center",
        },
        {
          "backgroundColor": "#1C1C1C",
          "color": "#F8FAFC",
        },
      ]
    }
    value=""
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2A2A2A",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "marginLeft": 8,
        "opacity": 1,
        "width": 44,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="paper-plane"
      size={18}
    />
  </View>
</View>
`;

exports[`renders idle state (no text) 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "borderTopColor": "rgba(148, 163, 184, 0.15)",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 10,
      },
      {
        "backgroundColor": "#FFFFFF",
        "paddingBottom": 10,
      },
    ]
  }
>
  <TextInput
    blurOnSubmit={false}
    maxLength={1000}
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Type a message…"
    placeholderTextColor="#9CA3AF"
    returnKeyType="send"
    style={
      [
        {
          "borderRadius": 22,
          "flex": 1,
          "fontSize": 15,
          "maxHeight": 120,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
          "textAlignVertical": "center",
        },
        {
          "backgroundColor": "#F3F4F6",
          "color": "#1F2937",
        },
      ]
    }
    value=""
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E2E8F0",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "marginLeft": 8,
        "opacity": 1,
        "width": 44,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="paper-plane"
      size={18}
    />
  </View>
</View>
`;
